# travel_planner

./: .env.example  .gitignore  CODE_STRUCTURE.md  README.md  WORK_LOG.md  __init__.py  config.py  pyproject.toml  requirements.txt  run.py
agents/: __init__.py  accommodation_manager.py  budget_optimizer.py  food_advisor.py  route_planner.py  state.py  supervisor.py  transport_advisor.py  weather_forecaster.py
backend/: main.py
backend/api/: app.py  report.py  routes.py  websocket.py
backend/core/: budget.py  config.py  event_bus.py
backend/evaluation/: checker.py  collector.py  drift.py  experiment.py  judge.py  optimizer.py  pipeline.py  reporter.py  store.py  trajectory.py
backend/evidence/: manager.py  store.py
backend/harness/: travel_harness.py
backend/memory/: base.py  episodic.py  manager.py  semantic.py  working.py
backend/session/: manager.py
backend/skills/: accommodation_skill.py  base.py  budget_skill.py  discovery.py  food_skill.py  guards.py  registry.py  route_skill.py  transport_skill.py  weather_skill.py
backend/tools/: base.py  (+4 more)
data/: user_profile.json
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
graph/: __init__.py  builder.py  checkpoints.py  subgraphs.py
harness/: __init__.py  travel_harness.py
mcp_servers/: __init__.py  accommodation_server.py  search_server.py  transport_server.py  weather_server.py
tests/: __init__.py  test_mcp_servers.py
tools/: __init__.py  budget_calculator.py  date_utils.py  evidence.py  geo_utils.py
ui/: __init__.py  app.py  components.py
(+17 files in other folders)
